# CMake_Learning

./: .gitignore  CMakeLists.txt  aarch64.cmake  toolchain.cmake
libs/Randomize/: CMakeLists.txt
src/: game_interface.cpp  main.cpp
